Improve error message

--- a/javarifier.html
+++ b/javarifier.html
@@ -288,7 +288,7 @@ The <code>-printStubs</code> flag causes Javarifier not to perform
 inference, but only to output a list of classes for which stubs are needed.
 </p>
 
-<p>If you get the error "Attempted to resolve signatures for WORLD class ...",
+<p>If you get the error "Missing stub for class ...",
 then your stub library is missing the given class, or you have not
 specified the stub library location properly.
 </p>
