Updated the documentation with information on the dependencies, how to build them, and which environment variables are necessary

--- a/javarifier.html
+++ b/javarifier.html
@@ -149,11 +149,11 @@ variable.
 <ul>
 <li>
   For sh/bash, add to ~/.bashrc or ~/.bash_profile:
-<pre>export PATH=${PATH}:/path/to/javarifier/</pre>
+<pre>export PATH=${PATH}:/path/to/javarifier/scripts/</pre>
 </li>
 <li>
 For csh/tcsh, add to ~/.tcshrc or ~/.cshrc or ~/.login:
-<pre>setenv PATH=${PATH}:/path/to/javarifier/</pre>
+<pre>setenv PATH=${PATH}:/path/to/javarifier/scripts/</pre>
 </li>
 </ul>
 </li>
