Command-line options now start with a double-dash prefix

--- a/javarifier.html
+++ b/javarifier.html
@@ -547,6 +547,9 @@ Javarifier now works on the Eclipse compiler, which is over
       </li>
       <li>Removed some unnecessary and uninformative messages from output.
       </li>
+      <li>Command-line options now start with a double-dash prefix instead
+          of a single-dash prefix.  Run "javarifier -h" for a full list.
+      </li>
     </ul>
   </li>
 </ul>
@@ -554,7 +557,7 @@ Javarifier now works on the Eclipse compiler, which is over
 <hr/>
 
 <p>
-Last revised: June 10, 2010
+Last revised: June 15, 2010
 </p>
 
 </body>
