--- a/javarifier.html
+++ b/javarifier.html
@@ -26,7 +26,7 @@
           <li><a href="#using-stubs">Using stub classes</a></li>
           <li><a href="#using-heuristics">Applying heuristics to exclude fields from the abstract state</a></li>
           <li><a href="#using-debug">Understanding and debugging Javarifier output</a></li>
-          <li><a href="#test-suite">Running Javarifier test suite</a></li>
+          <li><a href="#test-suite">Running the Javarifier test suite</a></li>
         </ul></li>
       <li><a href="#feedback">Feedback</a>
         <ul>
@@ -475,7 +475,7 @@ Contact us if you need more help understanding the
 constraints.
 </p>
 
-<h3 id="test-suite"> Running Javarifier test suite </h3>
+<h3 id="test-suite"> Running the Javarifier test suite </h3>
 <p>
 A test suite is included with the release.  To run the test suite, go into the
 <code>tests/</code> directory and run <code>make</code>.  The output will
